--- a/cloudservice/src/main/webapp/WEB-INF/web.xml
+++ b/cloudservice/src/main/webapp/WEB-INF/web.xml
@@ -20,3 +20,25 @@
     <welcome-file>hello.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         version="6.0">
+  <display-name>cloudservice</display-name>
+
+  <servlet>
+    <servlet-name>Jersey</servlet-name>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+    <init-param>
+      <param-name>jersey.config.server.provider.packages</param-name>
+      <param-value>com.cti.demo</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>Jersey</servlet-name>
+    <url-pattern>/webapi/*</url-pattern>
+  </servlet-mapping>
+</web-app>
